gccida/c3/do_jump_by_parts_equality
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/do_jump_by_parts_equality/src/expr.c:10289:12: error: expected identifier or '('
 struct op = expand_expr( exp->vector.elements, 0LL, VOIDmode, EXPAND_NORMAL); 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/do_jump_by_parts_equality/src/expr.c:10313:31: error: invalid suffix 'orce' on integer constant
v10 = operand_sub*(short *)0xforce( op, v8, ( machine_mode)v5); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/do_jump_by_parts_equality/src/expr.c:10313:47: error: use of undeclared identifier 'machine_mode'
v10 = operand_sub*(short *)0xforce( op, v8, ( machine_mode)v5); 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/do_jump_by_parts_equality/src/expr.c:10313:7: error: use of undeclared identifier 'operand_sub'
v10 = operand_sub*(short *)0xforce( op, v8, ( machine_mode)v5); 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/do_jump_by_parts_equality/src/expr.c:10314:31: error: invalid suffix 'orce' on integer constant
v11 = operand_sub*(short *)0xforce( v7, v8, ( machine_mode)v5); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/do_jump_by_parts_equality/src/expr.c:10314:47: error: use of undeclared identifier 'machine_mode'
v11 = operand_sub*(short *)0xforce( v7, v8, ( machine_mode)v5); 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/do_jump_by_parts_equality/src/expr.c:10314:7: error: use of undeclared identifier 'operand_sub'
v11 = operand_sub*(short *)0xforce( v7, v8, ( machine_mode)v5); 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/do_jump_by_parts_equality/src/expr.c:10322:12: error: invalid suffix 'xmode' on integer constant
*(short *)0xmode, 
           ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/do_jump_by_parts_equality/src/obj/expr.o] Error 1
